tests/outref/TLL04.ref
Zero|Cool
Acid|Burn
Cereal|Killer
Lord|Nikon
Joey|
Zero|Cool
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_COLUMN_NAME : Unknown column: NOTATHING
Error with syntax near (line 1, column 8):

select notathing from names; select firstname from names limit 1;
       ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: select notathing from names;
Zero
Cool
